--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
-version: "1"
+version: "3"
 services:
-backend:
-  app:
-    build: .
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    command: ["python3", "bot.py", "dev-server-docker"]
