--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,10 @@
-version: "3"
+version: "3.3"
+
 services:
   app:
     build: .
+    command: python3 bot.py
+    restart: on-failure
+    ports:
+      - "8080:8080"
+
