--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ tgcrypto
 aiofiles
 bs4
 git+https://github.com/zevtyardt/lk21@main#egg=lk21
+Flask==2.2.2
+gunicorn==20.1.0
+aiohttp==3.8.1
+pymongo[srv]==3.12.3
