--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ yt-dlp
 motor
 dnspython
 Pillow
-#aiohttp
+aiohttp
 hachoir
 requests
 tgcrypto
@@ -12,5 +12,5 @@ bs4
 git+https://github.com/zevtyardt/lk21@main#egg=lk21
 Flask==2.2.2
 gunicorn==20.1.0
-aiohttp==3.8.1
+#aiohttp==3.8.1
 pymongo[srv]==3.12.3
