--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: "3.3"
-
+version: "3"
 services:
-  app:
-    build: .
-    command: python3 bot.py
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile-frontend
     ports:
-      - "80:80"
+      - "8080:8080"
+    command: ["python3", "bot.py"]
